--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
 <div class="wrapper">
-
-  <!-- Navbar -->
-  <app-navbar></app-navbar>
-
-  <!-- Main Sidebar Container -->
-  <app-sidebar></app-sidebar>
-
-  <app-main></app-main>
-
-  <!-- Footer -->
-  <app-footer></app-footer>
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-
+  <router-outlet></router-outlet>
 </div>
